--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<version>3.3.7-1</version>
 		</dependency>
 
+		<!--MySQL Driver-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -72,19 +78,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.codehaus.mojo</groupId>-->
-<!--                <artifactId>cobertura-maven-plugin</artifactId>-->
-<!--                <version>2.7</version>-->
-<!--                <configuration>-->
-<!--                    <formats>-->
-<!--                        <format>html</format>-->
-<!--                        <format>xml</format>-->
-<!--                    </formats>-->
-<!--                    <check />-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
