--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mysql://127.0.1.102:3306/sfg_prod
     username: sfg_prod_user
     password: guru
+    platform: mysql
   jpa:
     hibernate:
       ddl-auto: validate
